fix alignment

--- a/src/demo/pages/BlockchainTx.css
+++ b/src/demo/pages/BlockchainTx.css
@@ -155,7 +155,6 @@ body {
   padding: 0.3rem 1.8rem !important;
   float: right;
   margin-top: 3rem !important;
-  margin-right: 2rem !important;
 }
 .backgroundGrey{
   background-color: #F9F9F9;
